# Fluid-Simulation

./: .fluid.c.swp  .gitignore  .main.c.swp  CMakeLists.txt  Makefile  README.md  cuda1.txt  fluid.c  fluid.h  graphic.c  graphic.h  hosts  main  main.c  serial.txt
includes/: fluid.h  fluid_kernels.h  graphic.h  utility.h
input/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  gen.py
results/: result_1.txt  result_3.txt  result_4.txt  result_6.txt  result_7.txt
src/: fluid.c  fluid.cu  fluid_kernels.cu  graphic.c  graphic.cu  main.c  main.cpp  main.cu  utility.cu
